service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-record-service
spec:
  selector:
    app: patient-record-service
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
