ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medi-track-health-sync
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
  ingressClassName: gce
  rules:
    - http:
        paths:
          - path: /api/v1/patient-record-service
            pathType: Prefix
            backend:
              service:
                name: patient-record-service
                port:
                  number: 80
          - path: /api/v1/contributor-management-service
            pathType: Prefix
            backend:
              service:
                name: contributor-management-service
                port:
                  number: 80
          - path: /api/v1/commit-management-service
            pathType: Prefix
            backend:
              service:
                name: commit-management-service
                port:
                  number: 80
